--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Noto+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Noto+Sans:wght@400;700&display=swap");
 .bg-button-wrapper {
   max-width: 320px;
   position: relative;
@@ -127,6 +127,7 @@
   display: -ms-flexbox;
   display: flex;
   padding: 160px 0 40px;
+  margin-bottom: 44px;
 }
 .application-design-wrap .application-design {
   width: 50%;
@@ -135,6 +136,7 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
   font-size: 60px;
+  margin-bottom: 20px;
 }
 .application-design-wrap .application-design p {
   font-family: "Open Sans", sans-serif;
@@ -142,9 +144,11 @@
   font-size: 20px;
   line-height: 1.5;
   color: #000000;
+  margin-bottom: 33px;
 }
 .application-design-wrap .application-design-image {
-  width: 50%;
+  width: 58%;
+  margin-right: -62px;
 }
 
 .what-do-you-get-section {
@@ -265,7 +269,7 @@
 }
 .applications-info-wrap .applications-info-item {
   width: 33.33%;
-  padding: 19px 20px;
+  padding: 19px 20px 32px;
   border-top: 1px solid rgba(255, 255, 255, 0.3);
   border-right: 1px solid rgba(255, 255, 255, 0.3);
 }
@@ -280,6 +284,9 @@
   color: #ffffff;
 }
 
+.mobile-shop-section {
+  margin: 84px auto 93px;
+}
 .mobile-shop-section .section-title {
   display: -webkit-box;
   display: -webkit-flex;
@@ -287,6 +294,8 @@
   display: -ms-flexbox;
   display: flex;
   align-items: center;
+  line-height: 1.4;
+  margin-bottom: 87px;
 }
 .mobile-shop-section .section-title br {
   display: none;
@@ -294,7 +303,8 @@
 .mobile-shop-section .section-title img {
   flex-shrink: 0;
   vertical-align: bottom;
-  margin-left: 30px;
+  margin-left: 15px;
+  margin-right: 39px;
 }
 .mobile-shop-section .border-top {
   border-color: rgba(0, 0, 0, 0.1);
@@ -323,7 +333,10 @@
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  margin-bottom: 81px;
+}
+.loyalty-program-section .left-column {
+  max-width: 372px;
 }
 .loyalty-program-section .left-column .item-primary-title {
   color: #000000;
@@ -334,6 +347,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   display: inline-block;
+  margin-bottom: 21px;
 }
 .loyalty-program-section .left-column .item-primary-title span {
   font-size: 87px;
@@ -341,29 +355,40 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   display: inline-block;
-  transform: skew(-7deg, -18deg);
+  transform: skew(0deg, -26deg);
+  font-weight: 200;
+  font-family: "Montserrat", sans-serif;
 }
 .loyalty-program-section .left-column .item-text {
   font-size: 20px;
 }
 .loyalty-program-section .center-column {
   flex-shrink: 0;
-  margin: 0 100px;
+  margin: 0 123px 0 100px;
+}
+.loyalty-program-section .right-column {
+  padding-right: 70px;
+}
+.loyalty-program-section .right-column .item-text {
+  line-height: 1.33;
+}
+.loyalty-program-section .loyalty-program-items {
+  margin-top: 87px;
 }
 .loyalty-program-section .loyalty-program-item {
-  margin-bottom: 30px;
+  margin-bottom: 25px;
 }
 .loyalty-program-section .loyalty-program-item:last-child {
   margin-bottom: 0;
 }
 
 .packages-and-prices-section {
-  padding: 70px 0 100px;
+  padding: 63px 0 100px;
   background: radial-gradient(33.61% 118.78% at 4.37% 51.7%, #DD5DFC 0%, rgba(192, 34, 249, 0) 100%), linear-gradient(254.7deg, #DD5DFC 5.62%, #7252FC 74.01%);
   background-blend-mode: lighten, normal;
 }
 .packages-and-prices-section .section-title {
-  margin: 0 0 50px;
+  margin: 0 0 56px;
 }
 .packages-and-prices-section .packages-and-prices-text {
   max-width: 946px;
@@ -436,6 +461,7 @@
   font-weight: 500;
   line-height: 1.1;
   font-family: "Montserrat", sans-serif;
+  margin-bottom: 3px;
 }
 .packages-and-prices-items .link-to-buy {
   color: #000000;
@@ -455,7 +481,9 @@
   display: inline-block;
 }
 .packages-and-prices-items .marketplace-link {
-  margin-top: 10px;
+  margin-top: 15px;
+  font-size: 18px;
+  letter-spacing: 0.5px;
   display: -webkit-inline-box;
   display: -webkit-inline-flex;
   display: -moz-inline-flex;
@@ -473,7 +501,7 @@
 
 .contact-form-section {
   background-color: rgba(0, 0, 0, 0.2);
-  padding: 50px 77px 60px 35px;
+  padding: 50px 77px 66px 35px;
   position: relative;
   display: -webkit-box;
   display: -webkit-flex;
@@ -500,6 +528,7 @@
   font-weight: 300;
   line-height: 1.35;
   font-family: "Montserrat", sans-serif;
+  margin-bottom: 2px;
 }
 .contact-form-section .contact-phone-form-wrap .contact-tell {
   display: block;
@@ -521,6 +550,9 @@
   max-width: 581px;
   width: 100%;
   font-size: 18px;
+}
+.contact-form-section .contact-write-form-wrap .contact-form-title {
+  margin-bottom: 17px;
 }
 .contact-form-section .contact-write-form-wrap input {
   width: 100%;
@@ -695,9 +727,11 @@
   }
   .application-design-wrap .application-design h1 {
     font-size: 30px;
+    margin-bottom: 7px;
   }
   .application-design-wrap .application-design p {
     font-size: 18px;
+    margin-bottom: 13px;
   }
   .application-design-wrap .application-design-image {
     width: 53%;
@@ -782,7 +816,7 @@
     display: none;
   }
   .contact-form-section .contact-phone-form-wrap {
-    margin-bottom: 30px;
+    margin-bottom: 28px;
   }
   .contact-form-section .contact-phone-form-wrap .contact-tell {
     font-size: 30px;
@@ -810,6 +844,7 @@
     display: -ms-flexbox;
     display: flex;
     flex-direction: column;
+    padding: 20px 0 35px;
   }
   .application-design-wrap.content {
     width: calc(100% - 40px);
@@ -817,6 +852,7 @@
   }
   .application-design-wrap .application-design {
     width: 100%;
+    margin-bottom: 26px;
   }
   .application-design-wrap .application-design-image {
     width: auto;
@@ -828,6 +864,7 @@
   }
   .what-do-you-get-section .what-do-you-get-item {
     width: 100%;
+    min-height: 155px;
     padding: 15px 0;
     border-right: none;
     background-position: 100% bottom;
@@ -841,6 +878,19 @@
   .what-do-you-get-section .section-title br {
     display: none;
   }
+  .what-do-you-get-section .item-app-bg {
+    background-size: 61% auto;
+  }
+  .what-do-you-get-section .item-color-bg {
+    background-size: 51% auto;
+  }
+  .what-do-you-get-section .item-support-bg {
+    background-size: 59% auto;
+  }
+
+  .applications-info-section {
+    padding: 73px 0 2px;
+  }
 
   .applications-info-wrap {
     flex-wrap: wrap;
@@ -851,47 +901,71 @@
     padding: 10px 0 30px;
   }
 
+  .mobile-shop-section {
+    margin-top: 40px;
+    margin-bottom: 53px;
+  }
   .mobile-shop-section .section-title {
     margin-right: 0;
     flex-direction: column;
     align-items: flex-start;
     line-height: 1.4;
+    margin-bottom: 47px;
   }
   .mobile-shop-section .section-title br {
     display: block;
   }
   .mobile-shop-section .section-title img {
-    margin: -17px auto 0;
+    margin: -21px auto 0;
     max-width: 160px;
     width: 100%;
   }
   .mobile-shop-section .mobile-shop-info-item {
     width: 100%;
-    padding-left: 0;
+    padding: 12px 20px 28px 0;
   }
   .mobile-shop-section .mobile-shop-info-item:nth-child(odd) {
     border-right: none;
   }
 
+  .loyalty-program-section {
+    margin-bottom: 60px;
+  }
   .loyalty-program-section .left-column {
     width: 100%;
   }
+  .loyalty-program-section .left-column .item-primary-title {
+    margin-bottom: 13px;
+  }
   .loyalty-program-section .center-column {
-    width: 82%;
+    width: 78%;
     margin: 0 auto;
     padding-left: 0;
   }
   .loyalty-program-section .right-column {
     flex-wrap: wrap;
     margin: 0;
+    padding: 0;
   }
   .loyalty-program-section .right-column .loyalty-program-item {
     width: 100%;
     padding: 0;
   }
+  .loyalty-program-section .loyalty-program-items {
+    margin-top: 0;
+  }
+  .loyalty-program-section .loyalty-program-item {
+    margin-bottom: 13px;
+  }
 
+  .packages-and-prices-section {
+    padding: 55px 0 100px;
+  }
+  .packages-and-prices-section .section-title {
+    margin: 0 0 37px;
+  }
   .packages-and-prices-section .packages-and-prices-text {
-    margin: 30px 0 50px;
+    margin: 12px 0 50px;
   }
 
   .packages-and-prices-items .packages-and-prices-item {
