--- a/assets/scss/target-audience.css
+++ b/assets/scss/target-audience.css
@@ -130,15 +130,16 @@
   margin-bottom: 44px;
 }
 .application-design-wrap .application-design {
-  width: 50%;
-  width: 100%;
-  max-width: 730px;
+  width: 48%;
 }
 .application-design-wrap .application-design h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
   font-size: 60px;
   margin-bottom: 20px;
+}
+.application-design-wrap .application-design h1 br {
+  display: none;
 }
 .application-design-wrap .application-design p {
   font-family: "Open Sans", sans-serif;
@@ -910,6 +911,9 @@
   .application-design-wrap .application-design h1 {
     font-size: 30px;
     margin-bottom: 7px;
+  }
+  .application-design-wrap .application-design h1 br {
+    display: block;
   }
   .application-design-wrap .application-design p {
     font-size: 18px;
